--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'helloDataSource'
 // to create new subproject just add another 
 // include '<PROJECT_NAME>'
 include 'webeng02'
+include 'webeng03'
 
