--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'helloDataSource'
 include 'webeng02'
 include 'webeng03'
 include 'webeng04'
-
+include 'webeng05'
+include 'webeng05_jsp'
