--- a/webeng06/src/main/webapp/WEB-INF/web.xml
+++ b/webeng06/src/main/webapp/WEB-INF/web.xml
@@ -92,6 +92,10 @@
 		<param-name>db.tcpServer</param-name>
 		<param-value>-tcpAllowOthers</param-value>
 	</context-param>
+	<context-param>
+		<param-name>AuthToken</param-name>
+		<param-value>secretPassword</param-value>
+	</context-param>
 	<listener>
 		<listener-class>org.h2.server.web.DbStarter</listener-class>
 	</listener>
